--- a/mapify_svelte/index.html
+++ b/mapify_svelte/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="mapified is a webservice dedicated to bringing people together through the emotional experience of associating place with music."
+        />
         <title>mapified</title>
     </head>
     <body>
