--- a/mapify_svelte/index.html
+++ b/mapify_svelte/index.html
@@ -5,10 +5,35 @@
         <link href="/favicon.ico" rel="icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
+            name="keywords"
+            content="music, Spotify, maps, Queering the Map, Spotify Map, mapified, mapify, music sharing, web app, global music, connection, community"
+        />
+        <meta
             name="description"
             content="mapified is a webservice dedicated to bringing people together through the emotional experience of associating place with music."
         />
+        <meta name="author" content="sizhens" />
         <title>mapified</title>
+        <meta property="og:title" content="mapified" />
+        <meta property="og:type" content="website" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:url" content="https://mapified.me/" />
+        <meta property="og:description" content="music. memory. place." />
+        <meta
+            property="og:image"
+            content="https://mapified.me/static/thumbnail.png"
+        />
+        <meta name="twitter:card" content="music. memory. place." />
+        <meta name="twitter:site" content="@OFFICIAL_TWITTER" />
+        <meta name="twitter:title" content="mapified" />
+        <meta
+            name="twitter:description"
+            content="mapified is a webservice dedicated to bringing people together through the emotional experience of associating place with music."
+        />
+        <meta
+            name="twitter:image"
+            content="https://mapified.me/static/thumbnail.png"
+        />
     </head>
     <body>
         <div id="app"></div>
