Fix meta tag for preview image

--- a/mapify_svelte/index.html
+++ b/mapify_svelte/index.html
@@ -19,10 +19,7 @@
         <meta property="og:locale" content="en_US" />
         <meta property="og:url" content="https://mapified.me/" />
         <meta property="og:description" content="music. memory. place." />
-        <meta
-            property="og:image"
-            content="https://mapified.me/static/thumbnail.png"
-        />
+        <meta property="og:image" content="https://mapified.me/thumbnail.png" />
         <meta name="twitter:card" content="music. memory. place." />
         <meta name="twitter:site" content="@OFFICIAL_TWITTER" />
         <meta name="twitter:title" content="mapified" />
@@ -32,7 +29,7 @@
         />
         <meta
             name="twitter:image"
-            content="https://mapified.me/static/thumbnail.png"
+            content="https://mapified.me/thumbnail.png"
         />
     </head>
     <body>
