Update meta tags again.

--- a/mapify_svelte/index.html
+++ b/mapify_svelte/index.html
@@ -19,17 +19,14 @@
         <meta property="og:locale" content="en_US" />
         <meta property="og:url" content="https://mapified.me/" />
         <meta property="og:description" content="music. memory. place." />
-        <meta property="og:image" content="https://mapified.me/thumbnail.png" />
-        <meta name="twitter:card" content="music. memory. place." />
+        <meta property="og:image" content="https://mapified.me/thumbnail.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@OFFICIAL_TWITTER" />
         <meta name="twitter:title" content="mapified" />
-        <meta
-            name="twitter:description"
-            content="mapified is a webservice dedicated to bringing people together through the emotional experience of associating place with music."
-        />
+        <meta name="twitter:description" content="music. memory. place." />
         <meta
             name="twitter:image"
-            content="https://mapified.me/thumbnail.png"
+            content="https://mapified.me/thumbnail.jpg"
         />
     </head>
     <body>
